# OrionOS-Linux-Distro

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build-local-iso.sh  build-orionos-iso.sh
ai/: orionos-ai-platform.py
ci/github-actions/: build.yml
config/: defaults
docs/: contribution-guide.md  desktop-architecture.md  kernel-modifications.md  release-process.md  update-system.md
docs/architecture/: system-architecture.md
docs/desktop/: desktop-guide.md
docs/development/: developer-guide.md
docs/features/: ai-marketplace.md  arm64-support.md  calamares-installer.md  cloud-gaming.md  cloud-sync-gui.md  containers.md  display-optimization.md  game-optimization.md  mobile-companion.md  phone-sync.md  plugin-marketplace.md  secureboot.md  software-center.md  tpm-luks.md  voice-assistant.md
docs/installation/: installation-guide.md
docs/security/: security-model.md
ecosystem/: orionos-ecosystem.py
ecosystem/mobile-companion/cloud/: Dockerfile  go.mod  main.go
ecosystem/mobile-companion/config/: mobile-companion.conf
ecosystem/mobile-companion/desktop/: Cargo.toml  orionos-mobile-companion.desktop
ecosystem/mobile-companion/desktop/src/: main.rs
ecosystem/mobile-companion/proto/: companion.proto
ecosystem/phone-sync/: README.md
ecosystem/phone-sync/cloud/: Dockerfile  go.mod
ecosystem/phone-sync/cloud/cmd/server/: main.go
ecosystem/phone-sync/desktop/: Cargo.toml  build.rs
ecosystem/phone-sync/desktop/src/: main.rs
ecosystem/phone-sync/desktop/src/bluetooth/: mod.rs
ecosystem/phone-sync/desktop/src/clipboard/: mod.rs
ecosystem/phone-sync/desktop/src/cloud/: mod.rs
ecosystem/phone-sync/desktop/src/encryption/: mod.rs
ecosystem/phone-sync/desktop/src/input/: mod.rs
ecosystem/phone-sync/desktop/src/notification/: mod.rs
ecosystem/phone-sync/desktop/src/pairing/: mod.rs
ecosystem/phone-sync/desktop/src/sms/: mod.rs
ecosystem/phone-sync/proto/: sync.proto
gaming/: orionos-gaming-setup.sh
kernel/: Makefile
kernel/config/: orionos-kernel.config
profiles/default/: profile.conf
scripts/install/: install-calamares.sh
testing/: run-tests.sh
(+16 files in other folders)
